--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,25 +3,21 @@ name: Maven CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: Calidad
-
     steps:
-      # Paso 1: Clonar el repositorio
+      # 1. Checkout del repo en la raíz
       - name: Checkout del código
-        uses: actions/checkout@v4 # Actualizado a la última versión
+        uses: actions/checkout@v4
 
-      # Paso 2: Configurar JDK
+      # 2. Configurar Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -29,30 +25,30 @@ jobs:
           distribution: "temurin"
           cache: maven
 
-      # 3. Ejecutar los plugins
+      # 3. Compilar y correr tests
       - name: Build and Test
         run: mvn clean verify
 
-      # 4. Ejecutar Checkstyle
+      # 4. Checkstyle
       - name: Checkstyle Analysis
         run: mvn checkstyle:checkstyle
         continue-on-error: true
 
-      # 5. Ejecutar PMD
+      # 5. PMD
       - name: PMD Analysis
         run: mvn pmd:check
         continue-on-error: true
 
-      # 6. Generar reporte de cobertura con JaCoCo
+      # 6. JaCoCo
       - name: Generate Coverage Report
         run: mvn jacoco:report
 
-      # Paso 7: Subir artefactos generados
+      # 7. Subir artefactos generados
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Maven-Reports
           path: |
-            Calidad/target/site/jacoco/jacoco.xml
-            Calidad/target/checkstyle-result.xml
-            Calidad/target/pmd.xml
+            target/site/jacoco/jacoco.xml
+            target/checkstyle-result.xml
+            target/pmd.xml
